# hello-actions

./: CMakeLists.txt  TODO  build_info.h.in
.github/workflows/: release.yml  test.yml
src/: main.cpp  version_accessor.cpp  version_accessor.h
tests/: CMakeLists.txt  test_version_accessor.cpp
